--- a/recipe-app/src/app/home/home.page.html
+++ b/recipe-app/src/app/home/home.page.html
@@ -7,7 +7,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-step-card></app-step-card>
+  <ion-list>
+    <app-step-card *ngFor="let step of testRecipe.steps" [step]="step"></app-step-card>
+  </ion-list>
   <br>
   <br>
   <br>
